[gd_scene load_steps=3 format=3 uid="uid://c0jk80gpnf0fa"]

[ext_resource type="Theme" uid="uid://yyq15b6hjms" path="res://ui/debug_theme.tres" id="1_1bkdl"]
[ext_resource type="Script" path="res://ui/debug/character_stats_ui.gd" id="1_ofqrx"]

[node name="CharacterStatsUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_1bkdl")
script = ExtResource("1_ofqrx")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 0

[node name="HealthLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MovementLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="CharmsLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
